--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
-  <div class="header"></div>
+  <div class="header">Header</div>
 
-  <div class="sidebar"></div>
+  <div class="sidebar">Sidebar</div>
 
-  <div class="main-content"></div>
+  <div class="main-content">Main Content</div>
 </body>
 </html>
