Add upper header elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
   <title>Admin Dashboard</title>
 </head>
 <body>
-  <div class="header">Header</div>
+  <div class="header">
+    <div class="upper">
+      <div class="search">
+        <form action="">
+          <button type="submit">
+            <img src="assets/search.svg" alt="">
+          </button>
+
+          <input type="search" name="search" id="search">
+        </form>
+      </div>
+
+      <div class="user-info">          
+        <button type="button">
+          <img src="assets/notification.svg" alt="">
+        </button>
+
+        <img src="assets/user.svg" alt="">
+
+        <p>Dennis Ojeda</p>
+      </div>
+    </div>
+
+    <div class="lower">Lower Header</div>
+  </div>
 
   <div class="sidebar">Sidebar</div>
 
