--- a/index.html
+++ b/index.html
@@ -31,10 +31,30 @@
       </div>
     </div>
 
-    <div class="lower">Lower Header</div>
+    <div class="lower">
+      <div class="greetings">
+        <img src="assets/user.svg" alt="">
+
+        <div>
+          <p>Hi there,</p>
+          <p class="username">Dennis Ojeda (@dennisojeda)</p>
+        </div>
+
+      </div>
+
+      <div class="actions">
+        <button>New</button>
+
+        <button>Upload</button>
+        
+        <button>Share</button>
+      </div>
+    </div>
   </div>
 
-  <div class="sidebar">Sidebar</div>
+  <div class="sidebar">
+    
+  </div>
 
   <div class="main-content">Main Content</div>
 </body>
