Add sidebar elements

--- a/index.html
+++ b/index.html
@@ -53,7 +53,74 @@
   </div>
 
   <div class="sidebar">
+    <div class="logo">
+      <button>
+        <img src="assets/dashboard.svg" alt="">
+
+        <p>Dashboard</p>
+      </button>
+    </div>
+
+    <div class="upper">
+      <button>
+        <img src="assets/home.svg" alt="">
+
+        <p>Home</p>
+      </button>
+
+      <button>
+        <img src="assets/profile.svg" alt="">
+
+        <p>Profile</p>
+      </button>
+
+      <button>
+        <img src="assets/messages.svg" alt="">
+
+        <p>Messages</p>
+      </button>
+
+      <button>
+        <img src="assets/history.svg" alt="">
+
+        <p>History</p>
+      </button>
+
+      <button>
+        <img src="assets/tasks.svg" alt="">
+
+        <p>Tasks</p>
+      </button>
+
+      <button>
+        <img src="assets/communities.svg" alt="">
+
+        <p>Communities</p>
+      </button>
+    </div>
     
+    <div class="lower">
+      <button>
+        <img src="assets/settings.svg" alt="">
+
+        <p>Settings</p>
+      </button>
+
+      <button>
+        <img src="assets/support.svg" alt="">
+
+        <p>Support</p>
+      </button>
+
+      <button>
+        <img src="assets/privacy.svg" alt="">
+
+        <p>Privacy</p>
+      </button>
+
+    </div>
+
+    <div></div>
   </div>
 
   <div class="main-content">Main Content</div>
