--- a/index.html
+++ b/index.html
@@ -123,6 +123,50 @@
     <div></div>
   </div>
 
-  <div class="main-content">Main Content</div>
+  <div class="main-content">
+    <div class="projects">Projects</div>
+
+    <div class="announcements">Announcements</div>
+
+    <div class="trending">
+      <p class="title">
+        Trending
+      </p>
+
+      <div class="users">
+        <button type="button">
+          <img src="assets/trending-1.png" alt="">
+          
+          <p>@tegan</p>
+
+          <p>World Peace Builder</p>
+        </button type="button">
+
+        <button type="button">
+          <img src="assets/trending-2.png" alt="">
+
+          <p>@morgan</p>
+
+          <p>Super Cool Project</p>
+        </button type="button">
+
+        <button type="button">
+          <img src="assets/trending-3.png" alt="">
+
+          <p>@kendall</p>
+
+          <p>Life-Changing App</p>
+        </button type="button">
+
+        <button type="button">
+          <img src="assets/trending-4.png" alt="">
+
+          <p>@alex</p>
+
+          <p>No Traffic Maker</p>
+        </button type="button">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
