Add the elements of main content's Announcements section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,39 @@
   <div class="main-content">
     <div class="projects">Projects</div>
 
-    <div class="announcements">Announcements</div>
+    <div class="announcements">      
+      <p class="title">
+        Announcements
+      </p>
+
+      <div class="outer">
+        <div class="contents">
+          <div class="item">
+            <button type="button">
+              <p class="subject">Site Maintenance</p>            
+            </button type="button">
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt animi, neque nesciunt mollitia ex optio distinctio! Illo sunt illum quis? ...</p>
+          </div>
+
+          <div class="item">
+            <button type="button">
+              <p class="subject">Community Share Day</p>
+            </button type="button">
+            
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel hic nobis dolor, beatae inventore quod animi ipsam id mollitia ab! ...</p>
+          </div>
+
+          <div class="item">
+            <button type="button">
+              <p class="subject">Updated Privacy Policy</p>
+            </button type="button">
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum vel, non adipisci sunt fuga culpa iure totam doloremque? Ut, quia. ...</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="trending">
       <p class="title">
