Add the elements of main content's Projects section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,178 @@
   </div>
 
   <div class="main-content">
-    <div class="projects">Projects</div>
+    <div class="projects">
+      <div class="title">Your Projects</div>
+      <div class="cards">
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Super Cool Project</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, quo cumque? Dicta dolores eveniet, commodi voluptas laudantium voluptates porro facere?
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Less Cool Project</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, impedit?
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Impossible App</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A, quo deleniti. Quam rerum, fugit dolorem mollitia alias fugiat unde in aut aliquam quidem provident quae vitae voluptates nam, nulla temporibus? Commodi nesciunt id animi earum tenetur error perferendis natus amet?
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Easy Peasy App</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. At, rerum saepe! Voluptates ex exercitationem fugiat est quas quidem consequuntur enim.
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Ad Blocker</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sunt commodi numquam voluptatum quae repellat quis eius possimus nulla animi atque excepturi eos cupiditate, labore, laborum in quo iure beatae!
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="dash"></div>
+
+          <div class="content">
+            <div class="subject">
+              <p>Money Maker</p>
+            </div>
+
+            <div class="text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci tempora error recusandae iste nesciunt animi numquam ipsum rerum exercitationem voluptatem. Dignissimos, adipisci? Ex vel maxime, nihil ab ea hic, suscipit illo eius, vitae sequi sit eveniet sed dolores saepe perspiciatis.
+            </div>
+
+            <div class="buttons">
+              <button type="button">
+                <img src="assets/star.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/eye.svg" alt="">
+              </button>
+
+              <button type="button">
+                <img src="assets/share.svg" alt="">
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="announcements">      
       <p class="title">
