Update sidebar HTML and css
Replaced buttons with links.

Changed text and SVG color to white.

Aligned links to the sidebar's vertical center.

--- a/index.html
+++ b/index.html
@@ -54,69 +54,69 @@
 
   <div class="sidebar">
     <div class="logo">
-      <button>
+      <a href="">
         <img src="assets/dashboard.svg" alt="">
 
         <p>Dashboard</p>
-      </button>
+      </a>
     </div>
 
     <div class="upper">
-      <button>
+      <a href="">
         <img src="assets/home.svg" alt="">
 
         <p>Home</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/profile.svg" alt="">
 
         <p>Profile</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/messages.svg" alt="">
 
         <p>Messages</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/history.svg" alt="">
 
         <p>History</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/tasks.svg" alt="">
 
         <p>Tasks</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/communities.svg" alt="">
 
         <p>Communities</p>
-      </button>
+      </a>
     </div>
     
     <div class="lower">
-      <button>
+      <a href="">
         <img src="assets/settings.svg" alt="">
 
         <p>Settings</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/support.svg" alt="">
 
         <p>Support</p>
-      </button>
+      </a>
 
-      <button>
+      <a href="">
         <img src="assets/privacy.svg" alt="">
 
         <p>Privacy</p>
-      </button>
+      </a>
 
     </div>
 
