Update Trending HTML and CSS
Replaced buttons with links.

Changed front color of user description.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
               <p class="subject">Site Maintenance</p>            
             </button type="button">
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt animi, neque nesciunt mollitia ex optio distinctio! Illo sunt illum quis? ...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo odit magni eveniet laborum voluptatum obcaecati...</p>
           </div>
 
           <div class="item">
@@ -317,7 +317,7 @@
               <p class="subject">Community Share Day</p>
             </button type="button">
             
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel hic nobis dolor, beatae inventore quod animi ipsam id mollitia ab! ...</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia voluptates expedita perferendis quibusdam porro voluptas...</p>
           </div>
 
           <div class="item">
@@ -325,7 +325,7 @@
               <p class="subject">Updated Privacy Policy</p>
             </button type="button">
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum vel, non adipisci sunt fuga culpa iure totam doloremque? Ut, quia. ...</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque harum quibusdam delectus ex, earum quia...</p>
           </div>
         </div>
       </div>
@@ -337,37 +337,37 @@
       </p>
 
       <div class="users">
-        <button type="button">
+        <a href="">
           <img src="assets/trending-1.png" alt="">
           
-          <p>@tegan</p>
+          <p class="handle">@tegan</p>
 
           <p>World Peace Builder</p>
-        </button type="button">
+        </a>
 
-        <button type="button">
+        <a href="">
           <img src="assets/trending-2.png" alt="">
 
-          <p>@morgan</p>
+          <p class="handle">@morgan</p>
 
           <p>Super Cool Project</p>
-        </button type="button">
+        </a>
 
-        <button type="button">
+        <a href="">
           <img src="assets/trending-3.png" alt="">
 
-          <p>@kendall</p>
+          <p class="handle">@kendall</p>
 
           <p>Life-Changing App</p>
-        </button type="button">
+        </a>
 
-        <button type="button">
+        <a href="">
           <img src="assets/trending-4.png" alt="">
 
-          <p>@alex</p>
+          <p class="handle">@alex</p>
 
           <p>No Traffic Maker</p>
-        </button type="button">
+        </a>
       </div>
     </div>
   </div>
