Replace the admin user's image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <img src="assets/notification.svg" alt="">
         </button>
 
-        <img src="assets/user.svg" alt="">
+        <img src="assets/owl.png" alt="">
 
         <p>Dennis Ojeda</p>
       </div>
@@ -33,7 +33,7 @@
 
     <div class="lower">
       <div class="greetings">
-        <img src="assets/user.svg" alt="">
+        <img src="assets/owl.png" alt="">
 
         <div>
           <p>Hi there,</p>
