Fix the font weight of Trending's title

--- a/index.html
+++ b/index.html
@@ -305,25 +305,25 @@
       <div class="outer">
         <div class="contents">
           <div class="item">
-            <button type="button">
+            <a href="">
               <p class="subject">Site Maintenance</p>            
-            </button type="button">
+            </a>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo odit magni eveniet laborum voluptatum obcaecati...</p>
           </div>
 
           <div class="item">
-            <button type="button">
+            <a href="">
               <p class="subject">Community Share Day</p>
-            </button type="button">
+            </a>
             
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia voluptates expedita perferendis quibusdam porro voluptas...</p>
           </div>
 
           <div class="item">
-            <button type="button">
+            <a href="">
               <p class="subject">Updated Privacy Policy</p>
-            </button type="button">
+            </a>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque harum quibusdam delectus ex, earum quia...</p>
           </div>
