Add a hover effect to the sidebar links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   <div class="sidebar">
     <div class="logo">
-      <a href="">
+      <a href="" class="no-hover">
         <img src="assets/dashboard.svg" alt="">
 
         <p>Dashboard</p>
