Update the style of upper header's user-info
Made the user image and name a button.

Removed button border.

Removed button background.

Added button background color on hover.

Added border radius.

Added padding.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
           <img src="assets/notification.svg" alt="">
         </button>
 
-        <img src="assets/owl.png" alt="">
-
-        <p>Dennis Ojeda</p>
+        <button type="button">
+          <img src="assets/owl.png" alt="">
+          <p>Dennis Ojeda</p>
+        </button>
       </div>
     </div>
 
